# group-api

./: Cargo.toml  sqlx-data.json
src/: main.rs
src/models/: appointments.rs  assets.rs  games.rs  mod.rs  models.rs  proposals.rs  users.rs  vendors.rs
src/routes/: appointments.rs  assets.rs  games.rs  mod.rs  proposals.rs  users.rs  vendors.rs
